# snake

./: LICENSE  README.md  snake.cabal
src/: Main.hs  Snake.hs
