name:                snake
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/snake#readme
license:             MIT
license-file:        LICENSE
author:              flurescein
maintainer:          flurescein@gmail.com
copyright:           2019 flurescein
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable snake
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
